# docs/swagger.json
@@ -2442,6 +2442,13 @@
                 "message"
             ],
             "properties": {
+                "custom_api_key": {
+                    "type": "string"
+                },
+                "custom_endpoint": {
+                    "description": "Custom AI Provider Configuration",
+                    "type": "string"
+                },
                 "max_tokens": {
                     "type": "integer"
                 },
